android call JS method

--- a/app/src/main/assets/js.html
+++ b/app/src/main/assets/js.html
@@ -5,8 +5,8 @@
                 <title>Test android call JS</title>
 
                 <script>
-                    function callJS(){
-                        alert("Android调用了JS的")
+                    function myJS(){
+                        alert("Android调用了JS的myJS方法");
                     }
                 </script>
             </head>
